In progress: Adding style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Joke teller</title>
 </head>
 <body>
-
+    <div class="container">
+        <button id="button">Tell me a joke</button>
+        <audio id="audio" controls></audio>
+    </div>
 </body>
 </html>
